v4 Without Casts/y.output
Terminals unused in grammar

   IMPORT
   JNULL
   NEW
   OPERATOR
   OP_DIM
   ASS_AND
   ASS_OR
   '~'


Grammar

    0 $accept: ProgramFile $end

    1 TypeSpecifier: TypeName

    2 TypeName: BOOLEAN
    3         | CHAR
    4         | BYTE
    5         | SHORT
    6         | INT
    7         | LONG
    8         | FLOAT
    9         | DOUBLE
   10         | VOID
   11         | STRING
   12         | STRING '[' ']'

   13 ProgramFile: ClassHeader '{' FieldDeclarations '}'

   14 ClassHeader: PUBLIC CLASS ID
   15            | CLASS ID

   16 FieldDeclarations: FieldDeclaration
   17                  | FieldDeclarations FieldDeclaration

   18 FieldDeclaration: AttrDeclaration ';'
   19                 | MethodDeclaration

   20 AttrDeclaration: PUBLIC STATIC TypeSpecifier VariableDeclarators
   21                | STATIC TypeSpecifier VariableDeclarators

   22 VariableDeclarators: VariableDeclarator
   23                    | VariableDeclarators ',' VariableDeclarator

   24 VariableDeclarator: ID
   25                   | ID '=' Expression

   26 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator Block
   27                  | STATIC TypeSpecifier MethodDeclarator Block

   28 MethodDeclarator: ID '(' ParameterList ')'
   29                 | ID '(' ')'

   30 ParameterList: Parameter
   31              | ParameterList ',' Parameter

   32 Parameter: TypeSpecifier ID

   33 Block: '{' LocalVariableDeclarationsAndStatements '}'
   34      | '{' '}'

   35 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationOrStatement
   36                                       | LocalVariableDeclarationsAndStatements LocalVariableDeclarationOrStatement

   37 LocalVariableDeclarationOrStatement: LocalVariableDeclarationStatement
   38                                    | Statement

   39 LocalVariableDeclarationStatement: TypeSpecifier VariableDeclarators ';'

   40 Statement: LabeledStatement
   41          | Expression ';'
   42          | SelectionStatement
   43          | IterationStatement
   44          | JumpStatement
   45          | Block
   46          | ';'

   47 LabeledStatement: ID ':' LocalVariableDeclarationOrStatement
   48                 | CASE ConditionalExpression ':' LocalVariableDeclarationOrStatement
   49                 | CASE '(' ConditionalExpression ')' ':' LocalVariableDeclarationOrStatement
   50                 | DEFAULT ':' LocalVariableDeclarationOrStatement

   51 SelectionStatement: IF '(' Expression ')' Statement ELSE Statement
   52                   | IF '(' Expression ')' Statement
   53                   | SWITCH '(' Expression ')' Block

   54 IterationStatement: WHILE '(' Expression ')' Statement
   55                   | DO Statement WHILE '(' Expression ')' ';'
   56                   | FOR '(' ForInit ForExpr Expressions ')' Statement
   57                   | FOR '(' ForInit ForExpr ')' Statement

   58 ForInit: Expressions ';'
   59        | LocalVariableDeclarationStatement
   60        | ';'

   61 ForExpr: ConditionalExpression ';'
   62        | AssignmentExpression ';'
   63        | '(' Expression ')' ';'
   64        | ';'

   65 Expressions: Expression
   66            | Expressions ',' Expression

   67 JumpStatement: BREAK ID ';'
   68              | BREAK ';'
   69              | CONTINUE ID ';'
   70              | CONTINUE ';'
   71              | RETURN Expression ';'
   72              | RETURN ';'

   73 MethodCall: ID '(' Expressions ')'
   74           | ID '(' ')'

   75 SystemOutPrintln: PRINTLN '(' LITERAL ',' Expressions ')'
   76                 | PRINTLN '(' PrintExpressions ')'

   77 PrintExpressions: BasicElement
   78                 | PrintExpressions '+' BasicElement

   79 UnaryExpression: OP_INC BasicElement
   80                | OP_DEC BasicElement
   81                | BasicElement OP_INC
   82                | BasicElement OP_DEC
   83                | BasicElement
   84                | '!' BasicElement

   85 BasicElement: LITERAL
   86             | MethodCall
   87             | ID
   88             | TRUE
   89             | FALSE
   90             | INTEGER
   91             | FLOATPOINT
   92             | SystemOutPrintln

   93 ArithmeticExpression: UnaryExpression
   94                     | ArithmeticExpression '+' ArithmeticExpression
   95                     | ArithmeticExpression '-' ArithmeticExpression
   96                     | ArithmeticExpression '/' ArithmeticExpression
   97                     | ArithmeticExpression '*' ArithmeticExpression
   98                     | ArithmeticExpression '%' ArithmeticExpression
   99                     | ArithmeticExpression OP_SHL ArithmeticExpression
  100                     | ArithmeticExpression OP_SHR ArithmeticExpression

  101 RelationalExpression: ArithmeticExpression
  102                     | ArithmeticExpression '<' RelationalExpression
  103                     | ArithmeticExpression '>' RelationalExpression
  104                     | ArithmeticExpression OP_LESS_EQUAL RelationalExpression
  105                     | ArithmeticExpression OP_GREATER_EQUAL RelationalExpression
  106                     | ArithmeticExpression OP_EQUAL RelationalExpression
  107                     | ArithmeticExpression OP_DIFFERENT RelationalExpression
  108                     | ArithmeticExpression '&' RelationalExpression
  109                     | ArithmeticExpression '^' RelationalExpression
  110                     | ArithmeticExpression '|' RelationalExpression

  111 Expression: ConditionalExpression
  112           | AssignmentExpression
  113           | '(' Expression ')'

  114 ConditionalExpression: RelationalExpression
  115                      | RelationalExpression OP_AND ConditionalExpression
  116                      | RelationalExpression OP_OR ConditionalExpression
  117                      | '!' '(' RelationalExpression ')'
  118                      | RelationalExpression '?' Expression ':' Expression

  119 AssignmentExpression: ID '=' Expression
  120                     | ID ASS_MUL Expression
  121                     | ID ASS_DIV Expression
  122                     | ID ASS_ADD Expression
  123                     | ID ASS_SUB Expression
  124                     | ID ASS_XOR Expression
  125                     | ID ASS_MOD Expression
  126                     | ID ASS_SHL Expression
  127                     | ID ASS_SHR Expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 84 117
'%' (37) 98
'&' (38) 108
'(' (40) 28 29 49 51 52 53 54 55 56 57 63 73 74 75 76 113 117
')' (41) 28 29 49 51 52 53 54 55 56 57 63 73 74 75 76 113 117
'*' (42) 97
'+' (43) 78 94
',' (44) 23 31 66 75
'-' (45) 95
'/' (47) 96
':' (58) 47 48 49 50 118
';' (59) 18 39 41 46 55 58 60 61 62 63 64 67 68 69 70 71 72
'<' (60) 102
'=' (61) 25 119
'>' (62) 103
'?' (63) 118
'[' (91) 12
']' (93) 12
'^' (94) 109
'{' (123) 13 33 34
'|' (124) 110
'}' (125) 13 33 34
'~' (126)
error (256)
BOOLEAN (258) 2
BREAK (259) 67 68
BYTE (260) 4
CASE (261) 48 49
CHAR (262) 3
CLASS (263) 14 15
CONTINUE (264) 69 70
DEFAULT (265) 50
DO (266) 55
DOUBLE (267) 9
ELSE (268) 51
FLOAT (269) 8
FOR (270) 56 57
IF (271) 51 52
IMPORT (272)
INT (273) 6
JNULL (274)
LONG (275) 7
NEW (276)
OPERATOR (277)
PUBLIC (278) 14 20 26
PRINTLN (279) 75 76
RETURN (280) 71 72
SHORT (281) 5
STATIC (282) 20 21 26 27
STRING (283) 11 12
SWITCH (284) 53
VOID (285) 10
WHILE (286) 54 55
OP_INC (287) 79 81
OP_DEC (288) 80 82
OP_SHL (289) 99
OP_SHR (290) 100
OP_GREATER_EQUAL (291) 105
OP_LESS_EQUAL (292) 104
OP_EQUAL (293) 106
OP_DIFFERENT (294) 107
OP_AND (295) 115
OP_OR (296) 116
OP_DIM (297)
ASS_MUL (298) 120
ASS_DIV (299) 121
ASS_ADD (300) 122
ASS_SUB (301) 123
ASS_XOR (302) 124
ASS_MOD (303) 125
ASS_SHL (304) 126
ASS_SHR (305) 127
ASS_AND (306)
ASS_OR (307)
ID (308) 14 15 24 25 28 29 32 47 67 69 73 74 87 119 120 121 122 123
    124 125 126 127
LITERAL (309) 75 85
TRUE (310) 88
FALSE (311) 89
INTEGER (312) 90
FLOATPOINT (313) 91


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
TypeSpecifier (83)
    on left: 1, on right: 20 21 26 27 32 39
TypeName (84)
    on left: 2 3 4 5 6 7 8 9 10 11 12, on right: 1
ProgramFile (85)
    on left: 13, on right: 0
ClassHeader (86)
    on left: 14 15, on right: 13
FieldDeclarations (87)
    on left: 16 17, on right: 13 17
FieldDeclaration (88)
    on left: 18 19, on right: 16 17
AttrDeclaration (89)
    on left: 20 21, on right: 18
VariableDeclarators (90)
    on left: 22 23, on right: 20 21 23 39
VariableDeclarator (91)
    on left: 24 25, on right: 22 23
MethodDeclaration (92)
    on left: 26 27, on right: 19
MethodDeclarator (93)
    on left: 28 29, on right: 26 27
ParameterList (94)
    on left: 30 31, on right: 28 31
Parameter (95)
    on left: 32, on right: 30 31
Block (96)
    on left: 33 34, on right: 26 27 45 53
LocalVariableDeclarationsAndStatements (97)
    on left: 35 36, on right: 33 36
LocalVariableDeclarationOrStatement (98)
    on left: 37 38, on right: 35 36 47 48 49 50
LocalVariableDeclarationStatement (99)
    on left: 39, on right: 37 59
Statement (100)
    on left: 40 41 42 43 44 45 46, on right: 38 51 52 54 55 56 57
LabeledStatement (101)
    on left: 47 48 49 50, on right: 40
SelectionStatement (102)
    on left: 51 52 53, on right: 42
IterationStatement (103)
    on left: 54 55 56 57, on right: 43
ForInit (104)
    on left: 58 59 60, on right: 56 57
ForExpr (105)
    on left: 61 62 63 64, on right: 56 57
Expressions (106)
    on left: 65 66, on right: 56 58 66 73 75
JumpStatement (107)
    on left: 67 68 69 70 71 72, on right: 44
MethodCall (108)
    on left: 73 74, on right: 86
SystemOutPrintln (109)
    on left: 75 76, on right: 92
PrintExpressions (110)
    on left: 77 78, on right: 76 78
UnaryExpression (111)
    on left: 79 80 81 82 83 84, on right: 93
BasicElement (112)
    on left: 85 86 87 88 89 90 91 92, on right: 77 78 79 80 81 82 83
    84
ArithmeticExpression (113)
    on left: 93 94 95 96 97 98 99 100, on right: 94 95 96 97 98 99
    100 101 102 103 104 105 106 107 108 109 110
RelationalExpression (114)
    on left: 101 102 103 104 105 106 107 108 109 110, on right: 102
    103 104 105 106 107 108 109 110 114 115 116 117 118
Expression (115)
    on left: 111 112 113, on right: 25 41 51 52 53 54 55 63 65 66 71
    113 118 119 120 121 122 123 124 125 126 127
ConditionalExpression (116)
    on left: 114 115 116 117 118, on right: 48 49 61 111 115 116
AssignmentExpression (117)
    on left: 119 120 121 122 123 124 125 126 127, on right: 62 112


state 0

    0 $accept: . ProgramFile $end

    CLASS   shift, and go to state 1
    PUBLIC  shift, and go to state 2

    ProgramFile  go to state 3
    ClassHeader  go to state 4


state 1

   15 ClassHeader: CLASS . ID

    ID  shift, and go to state 5


state 2

   14 ClassHeader: PUBLIC . CLASS ID

    CLASS  shift, and go to state 6


state 3

    0 $accept: ProgramFile . $end

    $end  shift, and go to state 7


state 4

   13 ProgramFile: ClassHeader . '{' FieldDeclarations '}'

    '{'  shift, and go to state 8


state 5

   15 ClassHeader: CLASS ID .

    $default  reduce using rule 15 (ClassHeader)


state 6

   14 ClassHeader: PUBLIC CLASS . ID

    ID  shift, and go to state 9


state 7

    0 $accept: ProgramFile $end .

    $default  accept


state 8

   13 ProgramFile: ClassHeader '{' . FieldDeclarations '}'

    PUBLIC  shift, and go to state 10
    STATIC  shift, and go to state 11

    FieldDeclarations  go to state 12
    FieldDeclaration   go to state 13
    AttrDeclaration    go to state 14
    MethodDeclaration  go to state 15


state 9

   14 ClassHeader: PUBLIC CLASS ID .

    $default  reduce using rule 14 (ClassHeader)


state 10

   20 AttrDeclaration: PUBLIC . STATIC TypeSpecifier VariableDeclarators
   26 MethodDeclaration: PUBLIC . STATIC TypeSpecifier MethodDeclarator Block

    STATIC  shift, and go to state 16


state 11

   21 AttrDeclaration: STATIC . TypeSpecifier VariableDeclarators
   27 MethodDeclaration: STATIC . TypeSpecifier MethodDeclarator Block

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26

    TypeSpecifier  go to state 27
    TypeName       go to state 28


state 12

   13 ProgramFile: ClassHeader '{' FieldDeclarations . '}'
   17 FieldDeclarations: FieldDeclarations . FieldDeclaration

    PUBLIC  shift, and go to state 10
    STATIC  shift, and go to state 11
    '}'     shift, and go to state 29

    FieldDeclaration   go to state 30
    AttrDeclaration    go to state 14
    MethodDeclaration  go to state 15


state 13

   16 FieldDeclarations: FieldDeclaration .

    $default  reduce using rule 16 (FieldDeclarations)


state 14

   18 FieldDeclaration: AttrDeclaration . ';'

    ';'  shift, and go to state 31


state 15

   19 FieldDeclaration: MethodDeclaration .

    $default  reduce using rule 19 (FieldDeclaration)


state 16

   20 AttrDeclaration: PUBLIC STATIC . TypeSpecifier VariableDeclarators
   26 MethodDeclaration: PUBLIC STATIC . TypeSpecifier MethodDeclarator Block

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26

    TypeSpecifier  go to state 32
    TypeName       go to state 28


state 17

    2 TypeName: BOOLEAN .

    $default  reduce using rule 2 (TypeName)


state 18

    4 TypeName: BYTE .

    $default  reduce using rule 4 (TypeName)


state 19

    3 TypeName: CHAR .

    $default  reduce using rule 3 (TypeName)


state 20

    9 TypeName: DOUBLE .

    $default  reduce using rule 9 (TypeName)


state 21

    8 TypeName: FLOAT .

    $default  reduce using rule 8 (TypeName)


state 22

    6 TypeName: INT .

    $default  reduce using rule 6 (TypeName)


state 23

    7 TypeName: LONG .

    $default  reduce using rule 7 (TypeName)


state 24

    5 TypeName: SHORT .

    $default  reduce using rule 5 (TypeName)


state 25

   11 TypeName: STRING .
   12         | STRING . '[' ']'

    '['  shift, and go to state 33

    $default  reduce using rule 11 (TypeName)


state 26

   10 TypeName: VOID .

    $default  reduce using rule 10 (TypeName)


state 27

   21 AttrDeclaration: STATIC TypeSpecifier . VariableDeclarators
   27 MethodDeclaration: STATIC TypeSpecifier . MethodDeclarator Block

    ID  shift, and go to state 34

    VariableDeclarators  go to state 35
    VariableDeclarator   go to state 36
    MethodDeclarator     go to state 37


state 28

    1 TypeSpecifier: TypeName .

    $default  reduce using rule 1 (TypeSpecifier)


state 29

   13 ProgramFile: ClassHeader '{' FieldDeclarations '}' .

    $default  reduce using rule 13 (ProgramFile)


state 30

   17 FieldDeclarations: FieldDeclarations FieldDeclaration .

    $default  reduce using rule 17 (FieldDeclarations)


state 31

   18 FieldDeclaration: AttrDeclaration ';' .

    $default  reduce using rule 18 (FieldDeclaration)


state 32

   20 AttrDeclaration: PUBLIC STATIC TypeSpecifier . VariableDeclarators
   26 MethodDeclaration: PUBLIC STATIC TypeSpecifier . MethodDeclarator Block

    ID  shift, and go to state 34

    VariableDeclarators  go to state 38
    VariableDeclarator   go to state 36
    MethodDeclarator     go to state 39


state 33

   12 TypeName: STRING '[' . ']'

    ']'  shift, and go to state 40


state 34

   24 VariableDeclarator: ID .
   25                   | ID . '=' Expression
   28 MethodDeclarator: ID . '(' ParameterList ')'
   29                 | ID . '(' ')'

    '='  shift, and go to state 41
    '('  shift, and go to state 42

    $default  reduce using rule 24 (VariableDeclarator)


state 35

   21 AttrDeclaration: STATIC TypeSpecifier VariableDeclarators .
   23 VariableDeclarators: VariableDeclarators . ',' VariableDeclarator

    ','  shift, and go to state 43

    $default  reduce using rule 21 (AttrDeclaration)


state 36

   22 VariableDeclarators: VariableDeclarator .

    $default  reduce using rule 22 (VariableDeclarators)


state 37

   27 MethodDeclaration: STATIC TypeSpecifier MethodDeclarator . Block

    '{'  shift, and go to state 44

    Block  go to state 45


state 38

   20 AttrDeclaration: PUBLIC STATIC TypeSpecifier VariableDeclarators .
   23 VariableDeclarators: VariableDeclarators . ',' VariableDeclarator

    ','  shift, and go to state 43

    $default  reduce using rule 20 (AttrDeclaration)


state 39

   26 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator . Block

    '{'  shift, and go to state 44

    Block  go to state 46


state 40

   12 TypeName: STRING '[' ']' .

    $default  reduce using rule 12 (TypeName)


state 41

   25 VariableDeclarator: ID '=' . Expression

    PRINTLN     shift, and go to state 47
    OP_INC      shift, and go to state 48
    OP_DEC      shift, and go to state 49
    ID          shift, and go to state 50
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55
    '('         shift, and go to state 56
    '!'         shift, and go to state 57

    MethodCall             go to state 58
    SystemOutPrintln       go to state 59
    UnaryExpression        go to state 60
    BasicElement           go to state 61
    ArithmeticExpression   go to state 62
    RelationalExpression   go to state 63
    Expression             go to state 64
    ConditionalExpression  go to state 65
    AssignmentExpression   go to state 66


state 42

   28 MethodDeclarator: ID '(' . ParameterList ')'
   29                 | ID '(' . ')'

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26
    ')'      shift, and go to state 67

    TypeSpecifier  go to state 68
    TypeName       go to state 28
    ParameterList  go to state 69
    Parameter      go to state 70


state 43

   23 VariableDeclarators: VariableDeclarators ',' . VariableDeclarator

    ID  shift, and go to state 71

    VariableDeclarator  go to state 72


state 44

   33 Block: '{' . LocalVariableDeclarationsAndStatements '}'
   34      | '{' . '}'

    BOOLEAN     shift, and go to state 17
    BREAK       shift, and go to state 73
    BYTE        shift, and go to state 18
    CASE        shift, and go to state 74
    CHAR        shift, and go to state 19
    CONTINUE    shift, and go to state 75
    DEFAULT     shift, and go to state 76
    DO          shift, and go to state 77
    DOUBLE      shift, and go to state 20
    FLOAT       shift, and go to state 21
    FOR         shift, and go to state 78
    IF          shift, and go to state 79
    INT         shift, and go to state 22
    LONG        shift, and go to state 23
    PRINTLN     shift, and go to state 47
    RETURN      shift, and go to state 80
    SHORT       shift, and go to state 24
    STRING      shift, and go to state 25
    SWITCH      shift, and go to state 81
    VOID        shift, and go to state 26
    WHILE       shift, and go to state 82
    OP_INC      shift, and go to state 48
    OP_DEC      shift, and go to state 49
    ID          shift, and go to state 83
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55
    '('         shift, and go to state 56
    '!'         shift, and go to state 57
    '{'         shift, and go to state 44
    '}'         shift, and go to state 84
    ';'         shift, and go to state 85

    TypeSpecifier                           go to state 86
    TypeName                                go to state 28
    Block                                   go to state 87
    LocalVariableDeclarationsAndStatements  go to state 88
    LocalVariableDeclarationOrStatement     go to state 89
    LocalVariableDeclarationStatement       go to state 90
    Statement                               go to state 91
    LabeledStatement                        go to state 92
    SelectionStatement                      go to state 93
    IterationStatement                      go to state 94
    JumpStatement                           go to state 95
    MethodCall                              go to state 58
    SystemOutPrintln                        go to state 59
    UnaryExpression                         go to state 60
    BasicElement                            go to state 61
    ArithmeticExpression                    go to state 62
    RelationalExpression                    go to state 63
    Expression                              go to state 96
    ConditionalExpression                   go to state 65
    AssignmentExpression                    go to state 66


state 45

   27 MethodDeclaration: STATIC TypeSpecifier MethodDeclarator Block .

    $default  reduce using rule 27 (MethodDeclaration)


state 46

   26 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator Block .

    $default  reduce using rule 26 (MethodDeclaration)


state 47

   75 SystemOutPrintln: PRINTLN . '(' LITERAL ',' Expressions ')'
   76                 | PRINTLN . '(' PrintExpressions ')'

    '('  shift, and go to state 97


state 48

   79 UnaryExpression: OP_INC . BasicElement

    PRINTLN     shift, and go to state 47
    ID          shift, and go to state 98
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55

    MethodCall        go to state 58
    SystemOutPrintln  go to state 59
    BasicElement      go to state 99


state 49

   80 UnaryExpression: OP_DEC . BasicElement

    PRINTLN     shift, and go to state 47
    ID          shift, and go to state 98
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55

    MethodCall        go to state 58
    SystemOutPrintln  go to state 59
    BasicElement      go to state 100


state 50

   73 MethodCall: ID . '(' Expressions ')'
   74           | ID . '(' ')'
   87 BasicElement: ID .
  119 AssignmentExpression: ID . '=' Expression
  120                     | ID . ASS_MUL Expression
  121                     | ID . ASS_DIV Expression
  122                     | ID . ASS_ADD Expression
  123                     | ID . ASS_SUB Expression
  124                     | ID . ASS_XOR Expression
  125                     | ID . ASS_MOD Expression
  126                     | ID . ASS_SHL Expression
  127                     | ID . ASS_SHR Expression

    ASS_MUL  shift, and go to state 101
    ASS_DIV  shift, and go to state 102
    ASS_ADD  shift, and go to state 103
    ASS_SUB  shift, and go to state 104
    ASS_XOR  shift, and go to state 105
    ASS_MOD  shift, and go to state 106
    ASS_SHL  shift, and go to state 107
    ASS_SHR  shift, and go to state 108
    '='      shift, and go to state 109
    '('      shift, and go to state 110

    $default  reduce using rule 87 (BasicElement)


state 51

   85 BasicElement: LITERAL .

    $default  reduce using rule 85 (BasicElement)


state 52

   88 BasicElement: TRUE .

    $default  reduce using rule 88 (BasicElement)


state 53

   89 BasicElement: FALSE .

    $default  reduce using rule 89 (BasicElement)


state 54

   90 BasicElement: INTEGER .

    $default  reduce using rule 90 (BasicElement)


state 55

   91 BasicElement: FLOATPOINT .

    $default  reduce using rule 91 (BasicElement)


state 56

  113 Expression: '(' . Expression ')'

    PRINTLN     shift, and go to state 47
    OP_INC      shift, and go to state 48
    OP_DEC      shift, and go to state 49
    ID          shift, and go to state 50
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55
    '('         shift, and go to state 56
    '!'         shift, and go to state 57

    MethodCall             go to state 58
    SystemOutPrintln       go to state 59
    UnaryExpression        go to state 60
    BasicElement           go to state 61
    ArithmeticExpression   go to state 62
    RelationalExpression   go to state 63
    Expression             go to state 111
    ConditionalExpression  go to state 65
    AssignmentExpression   go to state 66


state 57

   84 UnaryExpression: '!' . BasicElement
  117 ConditionalExpression: '!' . '(' RelationalExpression ')'

    PRINTLN     shift, and go to state 47
    ID          shift, and go to state 98
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55
    '('         shift, and go to state 112

    MethodCall        go to state 58
    SystemOutPrintln  go to state 59
    BasicElement      go to state 113


state 58

   86 BasicElement: MethodCall .

    $default  reduce using rule 86 (BasicElement)


state 59

   92 BasicElement: SystemOutPrintln .

    $default  reduce using rule 92 (BasicElement)


state 60

   93 ArithmeticExpression: UnaryExpression .

    $default  reduce using rule 93 (ArithmeticExpression)


state 61

   81 UnaryExpression: BasicElement . OP_INC
   82                | BasicElement . OP_DEC
   83                | BasicElement .

    OP_INC  shift, and go to state 114
    OP_DEC  shift, and go to state 115

    $default  reduce using rule 83 (UnaryExpression)


state 62

   94 ArithmeticExpression: ArithmeticExpression . '+' ArithmeticExpression
   95                     | ArithmeticExpression . '-' ArithmeticExpression
   96                     | ArithmeticExpression . '/' ArithmeticExpression
   97                     | ArithmeticExpression . '*' ArithmeticExpression
   98                     | ArithmeticExpression . '%' ArithmeticExpression
   99                     | ArithmeticExpression . OP_SHL ArithmeticExpression
  100                     | ArithmeticExpression . OP_SHR ArithmeticExpression
  101 RelationalExpression: ArithmeticExpression .
  102                     | ArithmeticExpression . '<' RelationalExpression
  103                     | ArithmeticExpression . '>' RelationalExpression
  104                     | ArithmeticExpression . OP_LESS_EQUAL RelationalExpression
  105                     | ArithmeticExpression . OP_GREATER_EQUAL RelationalExpression
  106                     | ArithmeticExpression . OP_EQUAL RelationalExpression
  107                     | ArithmeticExpression . OP_DIFFERENT RelationalExpression
  108                     | ArithmeticExpression . '&' RelationalExpression
  109                     | ArithmeticExpression . '^' RelationalExpression
  110                     | ArithmeticExpression . '|' RelationalExpression

    OP_SHL            shift, and go to state 116
    OP_SHR            shift, and go to state 117
    OP_GREATER_EQUAL  shift, and go to state 118
    OP_LESS_EQUAL     shift, and go to state 119
    OP_EQUAL          shift, and go to state 120
    OP_DIFFERENT      shift, and go to state 121
    '|'               shift, and go to state 122
    '^'               shift, and go to state 123
    '&'               shift, and go to state 124
    '>'               shift, and go to state 125
    '<'               shift, and go to state 126
    '-'               shift, and go to state 127
    '+'               shift, and go to state 128
    '*'               shift, and go to state 129
    '/'               shift, and go to state 130
    '%'               shift, and go to state 131

    $default  reduce using rule 101 (RelationalExpression)


state 63

  114 ConditionalExpression: RelationalExpression .
  115                      | RelationalExpression . OP_AND ConditionalExpression
  116                      | RelationalExpression . OP_OR ConditionalExpression
  118                      | RelationalExpression . '?' Expression ':' Expression

    OP_AND  shift, and go to state 132
    OP_OR   shift, and go to state 133
    '?'     shift, and go to state 134

    $default  reduce using rule 114 (ConditionalExpression)


state 64

   25 VariableDeclarator: ID '=' Expression .

    $default  reduce using rule 25 (VariableDeclarator)


state 65

  111 Expression: ConditionalExpression .

    $default  reduce using rule 111 (Expression)


state 66

  112 Expression: AssignmentExpression .

    $default  reduce using rule 112 (Expression)


state 67

   29 MethodDeclarator: ID '(' ')' .

    $default  reduce using rule 29 (MethodDeclarator)


state 68

   32 Parameter: TypeSpecifier . ID

    ID  shift, and go to state 135


state 69

   28 MethodDeclarator: ID '(' ParameterList . ')'
   31 ParameterList: ParameterList . ',' Parameter

    ')'  shift, and go to state 136
    ','  shift, and go to state 137


state 70

   30 ParameterList: Parameter .

    $default  reduce using rule 30 (ParameterList)


state 71

   24 VariableDeclarator: ID .
   25                   | ID . '=' Expression

    '='  shift, and go to state 41

    $default  reduce using rule 24 (VariableDeclarator)


state 72

   23 VariableDeclarators: VariableDeclarators ',' VariableDeclarator .

    $default  reduce using rule 23 (VariableDeclarators)


state 73

   67 JumpStatement: BREAK . ID ';'
   68              | BREAK . ';'

    ID   shift, and go to state 138
    ';'  shift, and go to state 139


state 74

   48 LabeledStatement: CASE . ConditionalExpression ':' LocalVariableDeclarationOrStatement
   49                 | CASE . '(' ConditionalExpression ')' ':' LocalVariableDeclarationOrStatement

    PRINTLN     shift, and go to state 47
    OP_INC      shift, and go to state 48
    OP_DEC      shift, and go to state 49
    ID          shift, and go to state 98
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55
    '('         shift, and go to state 140
    '!'         shift, and go to state 57

    MethodCall             go to state 58
    SystemOutPrintln       go to state 59
    UnaryExpression        go to state 60
    BasicElement           go to state 61
    ArithmeticExpression   go to state 62
    RelationalExpression   go to state 63
    ConditionalExpression  go to state 141


state 75

   69 JumpStatement: CONTINUE . ID ';'
   70              | CONTINUE . ';'

    ID   shift, and go to state 142
    ';'  shift, and go to state 143


state 76

   50 LabeledStatement: DEFAULT . ':' LocalVariableDeclarationOrStatement

    ':'  shift, and go to state 144


state 77

   55 IterationStatement: DO . Statement WHILE '(' Expression ')' ';'

    BREAK       shift, and go to state 73
    CASE        shift, and go to state 74
    CONTINUE    shift, and go to state 75
    DEFAULT     shift, and go to state 76
    DO          shift, and go to state 77
    FOR         shift, and go to state 78
    IF          shift, and go to state 79
    PRINTLN     shift, and go to state 47
    RETURN      shift, and go to state 80
    SWITCH      shift, and go to state 81
    WHILE       shift, and go to state 82
    OP_INC      shift, and go to state 48
    OP_DEC      shift, and go to state 49
    ID          shift, and go to state 83
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55
    '('         shift, and go to state 56
    '!'         shift, and go to state 57
    '{'         shift, and go to state 44
    ';'         shift, and go to state 85

    Block                  go to state 87
    Statement              go to state 145
    LabeledStatement       go to state 92
    SelectionStatement     go to state 93
    IterationStatement     go to state 94
    JumpStatement          go to state 95
    MethodCall             go to state 58
    SystemOutPrintln       go to state 59
    UnaryExpression        go to state 60
    BasicElement           go to state 61
    ArithmeticExpression   go to state 62
    RelationalExpression   go to state 63
    Expression             go to state 96
    ConditionalExpression  go to state 65
    AssignmentExpression   go to state 66


state 78

   56 IterationStatement: FOR . '(' ForInit ForExpr Expressions ')' Statement
   57                   | FOR . '(' ForInit ForExpr ')' Statement

    '('  shift, and go to state 146


state 79

   51 SelectionStatement: IF . '(' Expression ')' Statement ELSE Statement
   52                   | IF . '(' Expression ')' Statement

    '('  shift, and go to state 147


state 80

   71 JumpStatement: RETURN . Expression ';'
   72              | RETURN . ';'

    PRINTLN     shift, and go to state 47
    OP_INC      shift, and go to state 48
    OP_DEC      shift, and go to state 49
    ID          shift, and go to state 50
    LITERAL     shift, and go to state 51
    TRUE        shift, and go to state 52
    FALSE       shift, and go to state 53
    INTEGER     shift, and go to state 54
    FLOATPOINT  shift, and go to state 55
    '('         shift, and go to state 56
    '!'         shift, and go to state 57
    ';'         shift, and go to state 148

    MethodCall             go to state 58
    SystemOutPrintln       go to state 59
    UnaryExpression        go to state 60
    BasicElement           go to state 61
    ArithmeticExpression   go to state 62
    RelationalExpression   go to state 63
    Expression             go to state 149
    ConditionalExpression  go to state 65
    AssignmentExpression   go to state 66


state 81

   53 SelectionStatement: SWITCH . '(' Expression ')' Block

    '('  shift, and go to state 150


state 82

   54 IterationStatement: WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 151


state 83
